--- a/src/partials/example.html
+++ b/src/partials/example.html
@@ -1,5 +1,5 @@
-<article class="example">
+<!-- <article class="example">
   <h2 class="text">Could you push button start and to fell the magic</h2>
   <button type="button" class="btn1" data-action="start">Start</button>
   <button type="button" class="btn2" data-action="stop">Stop</button>
-</article>
+</article> -->
