--- a/src/sass/_example.scss
+++ b/src/sass/_example.scss
@@ -1,23 +1,5 @@
-.btn1 {
-  background-color: pink;
-  height: 50px;
-  width: 100px;
-  margin-left: 40%;
-  // margin-top: 20%;
-  color: green;
-  border: 2px dashed black;
-}
-
-.btn2 {
-  background-color: pink;
-  height: 50px;
-  width: 100px;
-  color: green;
-  border: 2px dashed black;
-}
-.text {
-  // margin-left: 40%;
-  margin-top: 20%;
+h1 {
+  color: blueviolet;
   text-align: center;
-  color: rgb(37, 9, 63);
+  margin-top: 200px;
 }
